--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hotel Aaradhya Review Form</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -27,9 +29,13 @@
         <label for="email">Email Address:</label>
         <input type="email" id="email" name="email" placeholder="Enter your Email Address" required />
 
+        <label for="birthday">Birthday: </label>
+        <input type="date" id="birthday" name="birthday"  required>
+
+
         <label for="city">City:</label>
         <input type="text" id="city" name="city" placeholder="Enter your City" /><br /><br />
-        <h2>Ratings <span class="rate">(1:Bad/5:Excellent)</span></h2>
+        <h2>Ratings </span></h2>
 
         <div class="ratings">
             <div>
@@ -42,15 +48,15 @@
                     <input type="radio" id="frontOffice5" name="frontOfficeStaff" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
             <div>
-                <label>Restaurant Ambiance:</label>
+                <label>Ambiance:</label>
                 <div class="radios">
                     <input type="radio" id="RestaurantAmbiance1" name="RestaurantAmbiance" value="1" required />
                     <input type="radio" id="RestaurantAmbiance2" name="RestaurantAmbiance" value="2" required />
@@ -59,15 +65,15 @@
                     <input type="radio" id="RestaurantAmbiance5" name="RestaurantAmbiance" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
             <div>
-                <label>Restaurant Food:</label>
+                <label>Food:</label>
                 <div class="radios">
                     <input type="radio" id="RestaurantFood1" name="RestaurantFood" value="1" required />
                     <input type="radio" id="RestaurantFood2" name="RestaurantFood" value="2" required />
@@ -76,15 +82,15 @@
                     <input type="radio" id="RestaurantFood5" name="RestaurantFood" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
             <div>
-                <label>Restaurant Staff:</label>
+                <label>Staff:</label>
                 <div class="radios">
                     <input type="radio" id="RestaurantStaff1" name="RestaurantStaff" value="1" required />
                     <input type="radio" id="RestaurantStaff2" name="RestaurantStaff" value="2" required />
@@ -93,11 +99,11 @@
                     <input type="radio" id="RestaurantStaff5" name="RestaurantStaff" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
             <div>
@@ -110,11 +116,11 @@
                     <input type="radio" id="TravelDesk5" name="TravelDesk" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
             <div>
@@ -127,11 +133,11 @@
                     <input type="radio" id="HouseKeeping5" name="HouseKeeping" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
             <div>
@@ -144,11 +150,11 @@
                     <input type="radio" id="DoorMan5" name="DoorMan" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
             <div>
@@ -161,11 +167,11 @@
                     <input type="radio" id="RoomCleanliness5" name="RoomCleanliness" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
             <div>
@@ -178,11 +184,11 @@
                     <input type="radio" id="Overall5" name="Overall" value="5" required />
                 </div>
                 <div class="radio-labels">
-                    <label>1</label>
-                    <label>2</label>
-                    <label>3</label>
-                    <label>4</label>
-                    <label>5</label>
+                    <label>1⭐</label>
+                    <label>2⭐</label>
+                    <label>3⭐</label>
+                    <label>4⭐</label>
+                    <label>5⭐</label>
                 </div>
             </div>
         </div>
@@ -214,7 +220,7 @@
             <option value="NA">-- select --</option>
             <option value="vacation">Vacation</option>
             <option value="wedding">Wedding</option>
-            <option value="business">Business</option>
+            <option value="Restaurant">Restaurant</option>
             <option value="other">Other</option>
         </select>
         <br /><br />
@@ -223,7 +229,15 @@
 
         <br /><br />
         <button type="submit">Submit Review</button>
+        <br><br>
+        <div class="socials">
+            <a href="https://www.instagram.com/hotel_aaradhya_/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/people/Hotel-Aaradhya/100088504933323/?mibextid=2JQ9oc"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=7559114122"><i class="fa-brands fa-whatsapp"></i></a>
+            <a href="tel:+917559114122"><i class="fa-solid fa-phone"></i></a>
+        </div>
     </form>
+    
     <script>
         const scriptURL =
             "https://script.google.com/macros/s/AKfycbyRRxb06N79ryIMdsaJ2ZApN4-ayul8mDgxiKpe2W60oO2GkjzZo1DsXTuOmijh96YCmg/exec";
